<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/LinearLayout_padding_editor_activity"
    tools:context=".EditorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/swimming_day"
        android:textColor="@color/colorText"
        android:textSize="@dimen/text_size_swimming" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/text_viwe_day_paddking_top"
            android:text="@string/day"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_day" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/paddingLeft">

            <Spinner
                android:id="@+id/spinner_day"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_layout_height"
                android:paddingRight="@dimen/spinner_paddingRight"
                android:spinnerMode="dropdown"
                android:textSize="@dimen/spinnet_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/paddingTop_style"
            android:text="@string/style"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_style" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_style"
                android:inputType="textCapWords"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="@dimen/text_size_hint_style" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/paddingTop_time"
            android:text="@string/time"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_time" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="@dimen/paddingLeft_RL">

            <EditText
                android:id="@+id/edit_text_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_time"
                android:inputType="number"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="@dimen/text_size_hint_time" />

            <TextView
                android:id="@+id/units_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/paddingRight_units_time"
                android:paddingTop="@dimen/paddingTop_units_time"
                android:text="@string/min"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_size_unit_time" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="@dimen/paddingTop_note"
            android:text="@string/note"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/colorText"
            android:textSize="@dimen/text_size_note" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="@dimen/paddingLeft">

            <EditText
                android:id="@+id/edit_text_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_note"
                android:inputType="textCapWords"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="@dimen/text_size_hint_note" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

